# CHORD-LINER

./: .gitignore  CHORD-LINER.sln  README.md  app.py  pyproject.toml
.chalice/: config.json
.chalice/deployed/: dev.json
.github/workflows/: deploy.yml
CHORD-LINER/: CHORD-LINER.pyproj  CHORD_LINER.py  requirements.txt
CHORD-LINER/.chalice/: config.json
chalicelib/: chord_liner.py  extract_chord.py  save_file.py  translate_chord.py
tests/: test_extract_chord.py
translateChord/: translate_chord.py
