[tool.poetry]
name = "chord-liner"
version = "0.1.0"
description = ""
authors = ["isudzumi <isudzumi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
chalice = "^1.12.0"
line-bot-sdk = "^1.15.0"
pychord = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
